--- a/attached_assets/index.html
+++ b/attached_assets/index.html
@@ -168,7 +168,7 @@
   <script>
     let chatHistory = [];
 
-    async function askAI(context = '') {
+    function askAI(context = '') {
       const input = document.getElementById('questionInput');
       const question = input.value.trim();
       if (!question) return;
@@ -190,25 +190,11 @@
         </div>`;
       document.getElementById('chatArea').prepend(messageBox);
 
-      try {
-        const res = await fetch('/chat', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ message: question })
-        });
-        const data = await res.json();
-        
-        if (data.error === "Not logged in") {
-          window.location.href = '/login';
-          return;
-        }
-        
-        const response = data.response || "An error occurred. Please try again.";
+      setTimeout(() => {
+        const response = `This is an AI-generated answer for: ${question}`;
         messageBox.querySelector('.answer').textContent = `A: ${response}`;
         chatHistory.push({ q: question, a: response });
-      } catch (err) {
-        messageBox.querySelector('.answer').textContent = `A: Error: ${err.message}`;
-      }
+      }, 1000);
     }
 
     function retry(question) {
