--- a/attached_assets/index.html
+++ b/attached_assets/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Educore AI</title>
+  <title>Luna AI</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
     :root {
@@ -213,7 +213,7 @@
 <body>
   <div class="container">
     <div class="welcome" id="welcomeMessage">
-      <h1 style="margin-bottom: 1rem;">Welcome to Educore AI</h1>
+      <h1 style="margin-bottom: 1rem;">Welcome to Luna AI</h1>
       <p>How can I assist you today?</p>
     </div>
 
