--- a/attached_assets/index.html
+++ b/attached_assets/index.html
@@ -360,6 +360,368 @@ function toggleAnswer(elem) {
     function exportChat(type) {
       const text = chatHistory.map(c => `Q: ${c.q}\nA: ${c.a}\n`).join('\n');
       if (type === 'txt') {
+<?php
+// Future use: Handle login, chat history saving, and API calls here
+?>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Luna AI</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <style>
+    :root {
+      --primary: #4776E6;
+      --secondary: #8E54E9;
+      --light-bg: #f8f9fe;
+      --gradient: linear-gradient(135deg, var(--primary), var(--secondary));
+      --radius: 1rem;
+      --shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      --transition: all 0.3s ease;
+      --padding-mobile: 1rem;
+    }
+    @media (max-width: 768px) {
+      .container {
+        padding: var(--padding-mobile);
+      }
+      .welcome {
+        width: 100%;
+        margin: 1rem 0;
+        padding: 1.5rem;
+      }
+      .chat-box {
+        padding: 1rem;
+      }
+      .input-bar {
+        padding: 1rem;
+      }
+      .file-tools {
+        flex-wrap: wrap;
+      }
+      .file-tools label, .file-tools button {
+        flex: 1 1 calc(50% - 0.5rem);
+        text-align: center;
+        margin-bottom: 0.5rem;
+      }
+      .input-group {
+        flex-wrap: wrap;
+        gap: 0.5rem;
+      }
+      .input-group button {
+        flex: 1 1 auto;
+      }
+      input[type="text"] {
+        flex: 1 1 100%;
+      }
+    }
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+    body, html {
+      height: 100%;
+      font-family: 'Inter', -apple-system, sans-serif;
+      background-color: var(--light-bg);
+      color: #2d3748;
+    }
+    .container {
+      display: flex;
+      flex-direction: column;
+      height: 100%;
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+    .welcome {
+      margin: 2rem auto;
+      padding: 2rem;
+      border-radius: var(--radius);
+      background: var(--gradient);
+      color: white;
+      text-align: center;
+      box-shadow: var(--shadow);
+      width: 90%;
+      max-width: 700px;
+      transform: translateY(0);
+      transition: var(--transition);
+    }
+    .welcome:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+    }
+    .chat-area {
+      flex: 1;
+      overflow-y: auto;
+      padding: 1rem;
+      display: flex;
+      flex-direction: column-reverse;
+      gap: 1rem;
+    }
+    .chat-box {
+      background: white;
+      border-radius: var(--radius);
+      padding: 1.5rem;
+      box-shadow: var(--shadow);
+      transition: var(--transition);
+      animation: slideIn 0.3s ease-out;
+    }
+    @keyframes slideIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+    .chat-box:hover {
+      transform: translateX(5px);
+      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
+    }
+    .question {
+      font-weight: 600;
+      color: var(--primary);
+      margin-bottom: 1rem;
+    }
+    .answer {
+      line-height: 1.6;
+    }
+    .chat-actions {
+      display: flex;
+      gap: 1rem;
+      margin-top: 1rem;
+      padding-top: 1rem;
+      border-top: 1px solid #edf2f7;
+    }
+    .chat-actions i {
+      cursor: pointer;
+      padding: 0.5rem;
+      border-radius: 50%;
+      color: #718096;
+      transition: var(--transition);
+    }
+    .chat-actions i:hover {
+      color: var(--primary);
+      background: #edf2f7;
+    }
+    .input-bar {
+      padding: 1.5rem;
+      background: white;
+      border-top: 1px solid #edf2f7;
+      box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.05);
+    }
+    .file-tools {
+      display: flex;
+      gap: 0.75rem;
+      margin-bottom: 1rem;
+    }
+    .file-tools label, .file-tools button {
+      padding: 0.5rem 1rem;
+      border-radius: var(--radius);
+      background: #edf2f7;
+      color: #4a5568;
+      cursor: pointer;
+      border: none;
+      transition: var(--transition);
+      font-size: 0.9rem;
+    }
+    .file-tools label:hover, .file-tools button:hover {
+      background: #e2e8f0;
+      color: var(--primary);
+    }
+    .input-group {
+      display: flex;
+      gap: 0.5rem;
+      align-items: center;
+      border-bottom: 2px solid #edf2f7;
+      padding-bottom: 0.5rem;
+    }
+    input[type="text"] {
+      flex: 1;
+      padding: 0.75rem;
+      border: none;
+      font-size: 1rem;
+      background: transparent;
+      transition: var(--transition);
+    }
+    input[type="text"]:focus {
+      outline: none;
+    }
+    .input-group button {
+      width: 40px;
+      height: 40px;
+      padding: 0;
+      border-radius: 50%;
+      border: none;
+      background: var(--gradient);
+      color: white;
+      cursor: pointer;
+      transition: var(--transition);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    .input-group button:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 4px 12px rgba(66, 153, 225, 0.3);
+    }
+    .input-group button i {
+      font-size: 1rem;
+    }
+    #fileInput {
+      display: none;
+    }
+    .hide {
+      display: none !important;
+    }
+    .collapsible {
+  cursor: pointer;
+  transition: background 0.3s;
+}
+
+.collapsible:hover {
+  background: #f0f4ff;
+}
+    .typed {
+  white-space: pre-wrap;
+    }
+  </style>
+</head>
+<body>
+  
+  <div class="container">
+    <div class="welcome" id="welcomeMessage">
+      <h1 style="margin-bottom: 1rem;">Welcome to Luna AI</h1>
+      <p>How can I assist you today?</p>
+    </div>
+
+    <div class="chat-area" id="chatArea"></div>
+
+    <div class="input-bar">
+      <div class="file-tools">
+        <label for="fileInput"><i class="fas fa-paperclip"></i></label>
+        <input type="file" id="fileInput" multiple>
+        <button onclick="exportChat('txt')" title="Export as TXT"><i class="fas fa-file-export"></i></button>
+        <button onclick="exportChat('pdf')" title="Export as PDF"><i class="fas fa-file-pdf"></i></button>
+        <button onclick="clearChat()" title="Clear chat"><i class="fas fa-trash"></i></button>
+      </div>
+      <div class="input-group">
+        <input type="text" id="questionInput" placeholder="Type your question here..." autocomplete="off">
+        <button onclick="askAI()"><i class="fas fa-paper-plane"></i></button>
+        <button onclick="startVoiceInput()"><i class="fas fa-microphone"></i></button>
+      </div>
+    </div>
+  </div>
+  <script>
+window.onload = async () => {
+  const res = await fetch('/messages');
+  const history = await res.json();
+  const chatArea = document.getElementById('chatArea');
+
+  history.reverse().forEach(chat => {
+    if (chat.role === 'user') {
+      const question = chat.message;
+      const answerObj = history.find(m => m.role === 'assistant' && m.created_at > chat.created_at);
+
+      const card = document.createElement('div');
+      card.className = 'chat-box collapsible';
+      card.innerHTML = `
+        <div class='question' onclick="toggleAnswer(this)">
+          <strong>Q:</strong> ${question}
+        </div>
+        <div class='answer' style="display:none;">
+          A: ${answerObj ? answerObj.message : '(No response)'}
+          <div class='chat-actions'>
+            <i class="fas fa-copy" title="Copy" onclick='copyText(this)'></i>
+            <i class="fas fa-volume-up" title="Speak" onclick='speakText(this)'></i>
+          </div>
+        </div>
+      `;
+      chatArea.prepend(card);
+    }
+  });
+};
+
+function toggleAnswer(elem) {
+  const answer = elem.nextElementSibling;
+  answer.style.display = answer.style.display === 'none' ? 'block' : 'none';
+}
+
+    let chatHistory = [];
+
+    async function askAI(context = '') {
+      const input = document.getElementById('questionInput');
+      const question = input.value.trim();
+      if (!question) return;
+      input.value = '';
+
+      document.getElementById('welcomeMessage').classList.add('hide');
+
+      const messageBox = document.createElement('div');
+      messageBox.className = 'chat-box';
+      messageBox.innerHTML = `
+        <div class='question'>Q: ${question}</div>
+        <div class='answer'>A: Thinking...</div>
+        <div class='chat-actions'>
+          <i class="fas fa-redo" title="Retry" onclick='retry("${question.replace(/"/g, '\"')}")'></i>
+          <i class="fas fa-copy" title="Copy" onclick='copyText(this)'></i>
+          <i class="fas fa-edit" title="Edit" onclick='editText(this)'></i>
+          <i class="fas fa-thumbs-up" title="Thumbs Up"></i>
+          <i class="fas fa-volume-up" title="Speak" onclick='speakText(this)'></i>
+        </div>`;
+      document.getElementById('chatArea').prepend(messageBox);
+
+      try {
+        const response = await fetch('/chat', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ message: question })
+        });
+        const data = await response.json();
+
+        if (data.error === "Not logged in") {
+          window.location.href = '/login';
+          return;
+        }
+
+        const aiResponse = data.response || "An error occurred. Please try again.";
+        messageBox.querySelector('.answer').textContent = `A: ${aiResponse}`;
+        chatHistory.push({ q: question, a: aiResponse });
+      } catch (err) {
+        messageBox.querySelector('.answer').textContent = `A: Error: ${err.message}`;
+      }
+    }
+
+    function retry(question) {
+      document.getElementById('questionInput').value = question;
+      askAI();
+    }
+
+    function copyText(icon) {
+      const answer = icon.closest('.chat-box').querySelector('.answer').textContent.replace('A: ', '');
+      navigator.clipboard.writeText(answer);
+      icon.classList.replace('fa-copy', 'fa-check');
+      setTimeout(() => icon.classList.replace('fa-check', 'fa-copy'), 1500);
+    }
+
+    function speakText(icon) {
+      const text = icon.closest('.chat-box').querySelector('.answer').textContent;
+      const speech = new SpeechSynthesisUtterance(text);
+      window.speechSynthesis.speak(speech);
+    }
+
+    function editText(icon) {
+      const box = icon.closest('.chat-box');
+      const answer = box.querySelector('.answer');
+      const old = answer.textContent.replace('A: ', '');
+      const newText = prompt('Edit the response:', old);
+      if (newText) answer.textContent = 'A: ' + newText;
+    }
+
+    function clearChat() {
+      chatHistory = [];
+      document.getElementById('chatArea').innerHTML = '';
+    }
+
+    function exportChat(type) {
+      const text = chatHistory.map(c => `Q: ${c.q}\nA: ${c.a}\n`).join('\n');
+      if (type === 'txt') {
         const blob = new Blob([text], { type: 'text/plain' });
         const a = document.createElement('a');
         a.href = URL.createObjectURL(blob);
